# comppsych

./: .gitignore  app.py  batch_run.py  main.py  pyproject.toml  test_async.py
analysis/: batch_visualize_qwen.py  figure4a.ipynb  figure4a_no_reason.ipynb  inspect_human_data.ipynb  plot_individual_behavior.py  visualize.py
data/: claude-haiku-4-5_custom_20260401_194338.csv  claude-haiku-4-5_custom_20260401_194338_llm.jsonl  claude-haiku-4-5_easy_20260306_035540.csv  claude-haiku-4-5_easy_20260306_035540_meta.json  claude-haiku-4-5_easy_20260306_040741.csv  claude-haiku-4-5_easy_20260306_040741_meta.json  claude-haiku-4-5_easy_20260306_170931.csv  claude-haiku-4-5_human_20260401_194958_meta.json  claude-haiku-4-5_human_no_feedback_20260402_001101.csv  claude-haiku-4-5_human_no_feedback_20260402_001101_llm.jsonl  claude-haiku-4-5_human_no_feedback_20260402_001101_meta.json  claude-haiku-4-5_human_no_feedback_20260402_001758_llm.jsonl  claude-haiku-4-5_human_no_feedback_20260402_004050.csv  claude-haiku-4-5_human_no_feedback_20260402_004050_llm.jsonl  claude-haiku-4-5_human_no_feedback_20260402_004259.csv  claude-haiku-4-5_human_no_feedback_20260402_004259_llm.jsonl  claude-haiku-4-5_human_no_feedback_20260402_004717_llm.jsonl  claude-haiku-4-5_human_no_feedback_20260402_004717_meta.json  claude-haiku-4-5_recent_20260306_170314.csv  claude-haiku-4-5_recent_20260306_170314_meta.json  claude-haiku-4-5_recent_20260310_171655_meta.json  claude-haiku-4-5_recent_20260325_160324_meta.json  claude-haiku-4-5_recent_20260325_161224.csv  test_medium_20260306_035003.csv  (+1 more)
(+283 files in other folders)
